# githubchart

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs  main.rs  svg.rs  tests.rs
tests/: integration_tests.rs  lib.rs  svg.rs
web/: deno.ts  example.html  index.js
