[package]
name = "githubchart"
version = "5.0.0"
authors = ["frytg"]
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.17"

[profile.release]
# optimizations from https://github.com/johnthagen/min-sized-rust
opt-level = 'z' # optimize for size
lto = true # enable link time optimization
codegen-units = 1 # reduce parallel codegen units to increase optimizations
panic = 'abort' # abort on panic
strip = true # strip symbols from binary
